Fix bug causing the column hider button to not appear when no scrollbars are used.  Fix # (#1372)
Also fixes:
- Because <button> is used for the column hider button, an additional background image is bleeding into the button on iOS.  Change the implementation to use a <div> instead.
- When the column hider extension is used with the column resize extension, the column hider button cannot be clicked when there are no scrollbars.   Update the CSS to allow the column button to be clicked.

--- a/css/dgrid.css
+++ b/css/dgrid.css
@@ -198,6 +198,7 @@ html.has-mozilla .dgrid-focus {
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 99999;
 }
 .dgrid-rtl-swap .dgrid-hider-toggle {
   right: auto;
